# sqxclib

./: .gitignore  CHANGELOG.cn.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTORS.md  LICENSE.txt  README.cn.md  README.md  meson.build  sqxclib.pc.in
.github/workflows/: cmake-build-matrix-dispatch.yml  cmake-build-matrix.yml  cmake.yml
cmake/: FindJSONC.cmake  FindMYSQL.cmake  FindMySQL.cmake  FindSqxc.cmake
database/migrations/: 2021_10_12_000000_create_users_table.c  2021_10_12_000000_create_users_table.cpp  2021_10_12_111111_create_users_table.cpp  2021_11_26_091532_alter_users_table.cpp
doc/: SqApp.cn.md  SqApp.md  SqArray.cn.md  SqArray.md  SqBuffer.cn.md  SqBuffer.md  SqColumn.cn.md  SqColumn.md  SqConsole.cn.md  SqConsole.md  SqEntry.cn.md  SqEntry.md  SqIntArray.cn.md  SqIntArray.md  SqIntptrArray.cn.md  SqIntptrArray.md  SqPairs.cn.md  SqPairs.md  SqPtrArray.cn.md  SqPtrArray.md  SqQuery-macro.cn.md  SqQuery-macro.md  SqQuery.cn.md  SqQuery.md  SqReentry.cn.md  SqReentry.md  SqRelation.cn.md  SqRelation.md  SqRow.cn.md  SqRow.md  SqSchema.cn.md  SqSchema.md  SqStorage.cn.md  SqStorage.md  SqStrArray.cn.md  SqStrArray.md  SqTable.cn.md  SqTable.md  SqType.cn.md  SqType.md  (+26 more)
examples/: CMakeLists.txt  bili2mp4.c  meson.build  myapp-c99.c  myapp-cxx.cpp  storage-c99.c  storage-cxx.cpp  storage-row.cpp  xc_json_file.cpp
project-template/: CMakeLists.txt  README.cn.md  README.md  meson.build
project-template/cmake/: FindSqxc.cmake
project-template/sqapp/: CMakeLists.txt  CStructs.h  SqApp-config.h  meson.build  migrations-declarations  migrations-elements  sqtool.c
project-template/sqapp/templates/: migration-alter.cpp.txt  migration-create.cpp.txt
project-template/sqxcapp/: CMakeLists.txt  CStructs.h  SqApp-config.c  SqApp-config.h  SqAppTool-config.h  SqAppTool-migrations-files-cpp.cpp  SqAppTool-migrations-files.c  SqAppTool-migrations-files.cpp  meson.build  migrations-files-cxx.cpp  migrations-files.c  migrations-files.cpp  migrations.c  migrations.h  sqtool-cpp.cpp  sqtool.c  sqxcpptool.cpp  sqxctool.c
project-template/sqxcapp/templates/: migration-alter.c.txt  migration-alter.cpp.txt  migration-create.c.txt  migration-create.cpp.txt
project-template/src/: CMakeLists.txt  main-cxx.cpp  main-sqxcapp-cxx.cpp  main-sqxcapp.c  main.c  meson.build
sqapp/: CMakeLists.txt  CStructs.h  CommandCommon.c  CommandCommon.h  CommandMake.c  CommandMake.h  CommandMigrate.c  CommandMigrate.h  CommonOptions.c  CommonOptions.h  SqApp-config.h  SqApp.c  SqApp.h  SqAppConfig.h  SqAppTool-config.h  SqAppTool-migrations-files.c  SqAppTool-migrations.c  SqAppTool-migrations.cpp  SqAppTool.c  SqAppTool.h  SqMigration.c  SqMigration.h  SqPairs.c  SqPairs.h  meson.build  migrations-config  migrations-declarations  migrations-elements  migrations-files  migrations-files.c  migrations-files.cpp  migrations.c  migrations.h  sqtool-cxx.cpp  sqtool.c  sqtoolcpp.cpp
sqapp/templates/: migration-alter.c.txt  migration-alter.cpp.txt  migration-create.c.txt  migration-create.cpp.txt
sqxc/: CMakeLists.txt  SqArray.c  SqArray.h  SqBuffer.c  SqBuffer.h  SqColumn.c  SqColumn.h  SqCommand.c  SqCommand.h  SqConfig.h  SqConsole.c  SqConsole.h  SqConvert.c  SqConvert.h  SqDefine.c  SqDefine.h  SqEntry.c  SqEntry.h  SqError.h  SqField.c  SqField.h  SqJoint.c  SqJoint.h  SqMigration.c  SqMigration.h  SqOption.c  SqOption.h  SqPtrArray.c  SqPtrArray.h  SqQuery-macro.h  SqQuery-proxy.h  SqQuery.c  SqQuery.h  SqQueryMethod.h  SqRelation-migration.c  SqRelation-migration.h  SqRelation.c  SqRelation.h  SqSchema-macro.h  SqSchema.c  (+60 more)
sqxc/app/: CMakeLists.txt  SqApp.c  SqApp.h  SqAppCommands-make.c  SqAppCommands-migrate.c  SqAppCommands.h  SqAppOptions.c  SqAppOptions.h  SqAppTool.c  SqAppTool.h  SqMigration.c  SqMigration.h  meson.build  sqxcapp.h
sqxc/support/: CMakeLists.txt  SqCommand.c  SqCommand.h  SqConsole.c  SqConsole.h  SqHelpers.c  SqHelpers.h  SqOption.c  SqOption.h  SqPairs.c  SqPairs.h  SqRow.c  SqRow.h  SqdbEmpty.c  SqdbEmpty.h  SqxcEmpty.c  SqxcEmpty.h  SqxcFile.c  SqxcFile.h  SqxcMem.c  SqxcMem.h  sqxcsupport.h
sqxcapp/: CMakeLists.txt  CStructs.h  CommandMigrate.c  CommandMigrate.h  SqApp-config.c  SqApp-config.h  SqApp.c  SqApp.h  SqAppCommands-make.c  SqAppCommands-migrate.c  SqAppCommands.h  SqAppOptions.c  SqAppOptions.h  SqAppTool-config.h  SqAppTool-migrations-files.c  SqAppTool-migrations-files.cpp  SqAppTool.c  SqAppTool.h  SqCommandCommon.c  SqCommandCommon.h  SqCommandMake.c  SqCommandMake.h  SqCommandMigrate.c  SqCommandMigrate.h  SqMigration.c  SqMigration.h  meson.build  migrations-declarations  migrations-elements  migrations-files-cxx.cpp  migrations-files.c  migrations-files.cpp  migrations.c  migrations.h  sqtool-cpp.cpp  sqtool.c  sqxcapp.h  sqxctool.c
sqxcapp/templates/: migration-alter.c.txt  migration-alter.cpp.txt  migration-create.c.txt  migration-create.cpp.txt
sqxcsupport/: CMakeLists.txt  SqCommand.c  SqCommand.h  SqConsole.c  SqConsole.h  SqHelpers.c  SqHelpers.h  SqOption.c  SqOption.h  SqPairs.c  SqPairs.h  SqRow.c  SqRow.h  SqStr.c  SqStr.h  SqdbEmpty.c  SqdbEmpty.h  SqxcEmpty.c  SqxcEmpty.h  SqxcFile.c  SqxcFile.h  SqxcMem.c  SqxcMem.h  meson.build  sqxcsupport.h
tests/: CMakeLists.txt  meson.build  test-container-cxx.cpp  test-convert.c  test-cxx.cpp  test-migration.c  test-query.c  test-sqxc.c  test-storage.c  test-util.c
